--- a/wemeet/templates/emails/InvitationSent.html
+++ b/wemeet/templates/emails/InvitationSent.html
@@ -1,8 +1,9 @@
 {% load static %}
 <body>
-	<span><b>{{ invitedBy.first_name }} {{ invitedBy.last_name }}</b> has invited you to join the board: <b>{{ board.boardTitle }}</b> as role of <b>{{ role.role }}.</b></span><br>
-
-	you can Accept or Reject invitation from site.<br>
-	Thanks<br>
+	Greetings from WeMeet.<br> 
+	<b>{{ invitedBy.first_name }} {{ invitedBy.last_name }}</b> has invited you to join the board: <b>{{ board.boardTitle }}</b> as role of <b>{{ role.role }}.</b><br>
+	You can Accept or Reject invitation from site.<br><br>
+	
+	Regards,<br>
 	Team WeMeet
 </body>
