--- a/wemeet/templates/board/postDetails.html
+++ b/wemeet/templates/board/postDetails.html
@@ -47,9 +47,16 @@
                         <div style="font-size: 1.3rem">
                             <h4>Post Description</h4>
                             <p> {{ postobj.postDescription }} </p>
+                            {% if postatt %}
                             <ul class="list-group">
                                 <li class="list-group-item">
-                                    {% static postatt.postAttachment %}
+                                    <script>
+                                     let li = document.getElementsByClassName('list-group-item');
+                                     let val = "{% static postatt.postAttachment %}";
+                                     val = val.replace("%20", " ");
+                                     let underScore = val.indexOf('_');
+                                     document.write(val.substring(underScore+1));
+                                    </script>
                                 </li>
                             </ul>
                             <a class="btn btn-login btn-green" href="{% static postatt.postAttachment %}" download>
@@ -57,13 +64,14 @@
                                     Download Attachment
                                 </span>
                             </a>
+                            {% endif %}
                         </div>
                         <br>
                     </div>
                 </div>
             </div>
             {% if hasRight.POST_COMMENT %}
-            <div style="background-color: rgb(250,250,250); border-radius: 10px; padding: 10px 0px;" class="col-sm-12">
+            <div style="background-color: rgb(250,250,250); border-radius: 10px; padding: 10px 0px; margin-top:20px;" class="col-sm-12">
                 <div class="col-sm-1"></div>
                 <form method="POST" action="{% url 'add_comment' postId=postobj.postId %}" id="addcomment" class="col-sm-10">
                     {% csrf_token %}
@@ -77,7 +85,8 @@
     </div>
     <br><br>
   
-    <div class="container" style="margin-bottom: 80px;">
+    {% if comments %}
+    <div class="container">
         <div class="courses-wrapper">
             <h3>Comments</h3>
             {% for com in comments %}
@@ -136,7 +145,7 @@
             {% endfor %}
         </div>
     </div>
-    
+    {% endif %}
 </div>
 
 <script type="text/javascript">
